typhon-cluster/apps/glance/glance-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance-k8s
  template:
    metadata:
      labels:
        app: glance-k8s
    spec:
      serviceAccountName: glance-k8s
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: glance-k8s
          image: ghcr.io/lukasdietrich/glance-k8s/glance-k8s:v0.5.7
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: glance-k8s
spec:
  selector:
    app: glance-k8s
  ports:
    - name: http
      port: 80
      targetPort: http
